<resources>
    <string name="app_name">Course Project</string>
    <string name="task">Task %1$d</string>
    <string name="calc_button_number" translatable="false">%1$d</string>
    <string name="num_col" translatable="false">3</string>
    <string name="operator_plus" translatable="false">+</string>
    <string name="operator_minus" translatable="false">—</string>
    <string name="operator_mul" translatable="false">*</string>
    <string name="operator_float_div" translatable="false">÷</string>
    <string name="operator_div" translatable="false">DIV</string>
    <string name="operator_mod" translatable="false">MOD</string>
    <string name="operator_eq" translatable="false">=</string>
    <string name="calc_button_point" translatable="false">.</string>
    <string name="calc_button_clear" translatable="false">CE</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="division_by_zero">Division by zero!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="calc_syntax_error">Syntax error!</string>
    <string name="backspace" translatable="false">backspace</string>
    <string name="settings_acceleration">Acceleration</string>
    <string name="settings_horizontal_speed">Horizontal speed</string>
    <string name="settings_friction_coefficient">Friction coefficient</string>
    <string name="settings_energy_loss_when_collide">Energy loss when collide</string>
    <string name="settings">Settings</string>
    <string name="settings_view">Go to view</string>
    <string name="settings_save">Save</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_background_color">Background color</string>
    <string name="settings_object_color">Object color</string>
    <string name="settings_object">Object</string>
    <string name="settings_set_color">Set color</string>
    <string name="settings_choose_color">Choose color</string>
</resources>
