<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <Button
            android:text="@string/settings_view"
            android:id="@+id/gotoView"
            style="@style/AppTheme.settings_button"
    />
    <Button
            android:text="@string/settings_save"
            style="@style/AppTheme.settings_button"
    />
    <Button
            android:text="@string/settings_reset"
            style="@style/AppTheme.settings_button"
    />
</LinearLayout>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_acceleration"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarAccel"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_horizontal_speed"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarHorizSpeed"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_friction_coefficient"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarFrictionCoeff"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_energy_loss_when_collide"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarEnergyLoss"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_background_color"
    />
    <View android:layout_width="match_parent"
          android:layout_margin="4dp"
          android:layout_height="25dp"
          android:background="@android:color/black"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_foreground_color"
    />
    <View android:layout_width="match_parent"
          android:layout_margin="4dp"
          android:layout_height="25dp"
          android:background="@android:color/black"/>

</LinearLayout>
</ScrollView>
    </LinearLayout>