<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    >
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/сalc_button_block_margin"
    android:layout_marginBottom="@dimen/сalc_button_block_margin"
    android:layout_marginLeft="@dimen/сalc_button_block_margin"
    android:layout_marginRight="@dimen/сalc_button_block_margin"
    android:layout_height="match_parent"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    grid:columnCount="@string/num_col"
    android:background="@android:color/black"
    >

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_plus"
            android:tag="operator_button"
            />

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_minus"
            android:tag="operator_button"
            />

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_mult"
            android:tag="operator_button"
            />

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_float_div"
            android:tag="operator_button"
            />

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_div"
            android:tag="operator_button"
            />

        <Button
            grid:layout_rowWeight="1"
            grid:layout_columnWeight="1"
            style="@style/AppTheme.calc_button_operator.margin"
            android:text="@string/operator_mod"
            android:tag="operator_button"
            />
</android.support.v7.widget.GridLayout>
</LinearLayout>