<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/button_horiz_divider"
    android:showDividers="middle"
    >

    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        style="@style/AppTheme.calc_button_operator"
        android:text="@string/calc_button_clear"
        android:id="@+id/reset_button"
        />

    <Button
        android:layout_weight="1"
        android:layout_height="match_parent"
        style="@style/AppTheme.calc_button_operator"
        android:text="@string/operator_eq"
        android:tag="operator_button"
        />

    <ImageButton
        android:layout_weight="1"
        android:layout_height="match_parent"
        style="@style/AppTheme.calc_button_operator"
        android:src="@drawable/ic_backspace_black_24dp"
        android:id="@+id/backspace_button"
        android:contentDescription="@string/backspace" />
</LinearLayout>